# polkadot-sdk

./: .envrc-example  .fpm  .gitignore  .gitlab-ci.yml  .gitmodules  .lazy.lua  .prdoc.toml  .roomodes  .rustfmt.toml  .taplo.toml  0001-fast-unstake-fixed-benchmarks-vs-not-existent-valida.patch  0002-fast-unstake-Switch-Staking-to-async-in-pallet-tests.patch  0003-nomination-pools-migrate-from-staking-to-staking-asy.patch  0004-delegated-staking-migrate-from-staking-to-staking-as.patch  0005-Fix-.toml-format.patch  2025-11-06-inspect-the-last-commit-it-was-implementing-track.txt  BRIDGES.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Plan.toml  README.md  SECURITY.md  WARP.md  _typos.toml  asset_hub_rococo_runtime.compact.compressed.wasm  benchmark-results.txt  benchmark.sh  chain-spec.json  chain_spec.json  codecov.yml  crates.js  deny.toml  diff.txt  docker.txt  edited-chain-spec-plain.json  emulate-ci.sh  erc20.txt  (+46 more)
battleship-game/runtime/: Cargo.toml
bridges/: CODE_OF_CONDUCT.md  Cargo.toml  README.md  RELEASE.md  SECURITY.md
bridges/docs/: complex-relay.html  grandpa-finality-relay.html  high-level-overview.md  messages-relay.html  parachains-finality-relay.html  polkadot-kusama-bridge-overview.md  running-relayer.md
bridges/scripts/: verify-pallets-build.sh
bridges/snowbridge/: .gitignore  Cargo.toml  README.md  SECURITY.md  _typos.toml  codecov.yml  flake.nix  go.work.sum  rust-toolchain.toml
bridges/testing/: README.md  run-new-test.sh  run-test.sh  run-tests.sh
bridges/zombienet/: Dockerfile  README.md  build-docker.sh  run-new-test.sh  run-tests.sh  test.js
chains/chain-bridge-hub-cumulus/: Cargo.toml
cumulus/: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .rustfmt.toml  BRIDGES.md  CODEOWNERS  Cargo.toml  LICENSE  README.md  file_header.txt
cumulus/.github/: dependabot.yml  pr-custom-review.yml
cumulus/bridges/: README.md
cumulus/cli/: Cargo.toml
cumulus/collator/: Cargo.toml
cumulus/consensus/: Cargo.toml
cumulus/docker/: docker-compose.yml  injected.Dockerfile  parachain-registrar.dockerfile  polkadot-collator_builder.Containerfile  polkadot-parachain-debug_unsigned_injected.Dockerfile  polkadot-parachain_builder.Containerfile  test-parachain-collator.dockerfile  test-parachain_injected.Dockerfile
cumulus/docs/: container.md  documentation.md  overview.md  release.md
cumulus/message-broker/: Cargo.toml
cumulus/network/: Cargo.toml
cumulus/parachain-system/: Cargo.toml
cumulus/parachain-template/: README.md
cumulus/parachain-upgrade/: Cargo.toml
cumulus/parachains/: README.md
cumulus/polkadot-omni-node/: Cargo.toml  README.md  build.rs
cumulus/polkadot-omni-parachain/: Cargo.toml
cumulus/polkadot-parachain/: Cargo.toml  README.md  build.rs
cumulus/polkadot-parachains/: Cargo.toml
cumulus/primitives/: Cargo.toml
cumulus/rococo-parachains/: Cargo.toml  build.rs
cumulus/runtime/: Cargo.toml
cumulus/scripts/: benchmarks-ci.sh  benchmarks.sh  bridges_common.sh  bridges_kusama_polkadot.sh  bridges_polkadot_bulletin.sh  bridges_rococo_bulletin.sh  bridges_rococo_westend.sh  bridges_rococo_wococo.sh  bridges_update_subtree.sh  common.sh  create_bridge_hub_kusama_spec.sh  create_bridge_hub_polkadot_spec.sh  create_bridge_hub_westend_spec.sh  create_coretime_kusama_spec.sh  create_coretime_polkadot_spec.sh  create_coretime_rococo_spec.sh  create_coretime_westend_spec.sh  create_glutton_spec.sh  create_people_kusama_spec.sh  create_people_polkadot_spec.sh  create_people_rococo_spec.sh  create_people_westend_spec.sh  create_seedling_spec.sh  create_shell_spec.sh  generate_genesis_value.sh  inject_bootnodes.sh  parachains_integration_tests.sh  register_para.sh  register_parachain.sh  run_collator.sh  stop_collator.sh  temp_parachain_types.json
cumulus/service/: Cargo.toml
cumulus/templates/: xcm-bench-template.hbs
cumulus/upward-message/: Cargo.toml
cumulus/xcm-handler/: Cargo.toml
cumulus/zombienet_tests/: 0001-sync_blocks_from_tip_without_connected_collator.feature  0001-sync_blocks_from_tip_without_connected_collator.toml  0002-pov_recovery.feature  0002-pov_recovery.toml  0003-full_node_catching_up.feature  0003-full_node_catching_up.toml  0003-test_full_node_catching_up.feature  0003-test_full_node_catching_up.toml  0004-runtime_upgrade.feature  0006-rpc_collator_builds_blocks.feature  0006-rpc_collator_builds_blocks.toml  migrate_solo_to_para.js  register-para.js  runtime_upgrade.js
developer-hub/: Cargo.toml
developer-hub/headers/: toc.html
developer-hub/src/: lib.rs  meta_contributing.rs
devhub/: Cargo.toml
devhub/src/: lib.rs
doppelganger/: Cargo.toml  chain-specs
doppelganger/chain-specs/: coretime-westend.json  track.json
doppelganger/consensus/: Cargo.toml
doppelganger/src/: chain_spec  lib.rs
parachain/: Cargo.toml  README.md
parachain/.config/: taplo.toml
parachain/scripts/: verify-pallets-build.sh
parachain/templates/: benchmarking-fixtures.mustache  inbound-fixtures.mustache
polkadot/: Cargo.toml  README.md  RELEASE.md  build.rs  file_header.txt  sudofi
polkadot/.rpm/: polkadot.spec
polkadot/cli/: Cargo.toml  README.md  build.rs
polkadot/core-primitives/: Cargo.toml  README.md
polkadot/doc/: docker.md  release-checklist.md  shell-completion.md  testing.md
polkadot/erasure-coding/: Cargo.toml  README.md  build.rs
polkadot/grafana/: README.md
polkadot/jemalloc-shim/: Cargo.toml
polkadot/parachain/: Cargo.toml  README.md
polkadot/primitives/: Cargo.toml  README.md
polkadot/roadmap/: parachains.md  phase-1.toml
polkadot/rpc/: Cargo.toml  README.md
polkadot/scripts/: build-fast-rococo-and-update-chain-spec.sh  build-only-wasm.sh  common.sh  list-syscalls.rb  update-chain-spec-with-fast-rococo.sh  update-ui-tests.sh
polkadot/src/: main.rs
polkadot/tests/: common.rs  (+8 more)
smoketest/: .gitignore  Cargo.toml  make-bindings.sh
substrate/: .git-blame-ignore-revs  .gitattributes  Cargo.toml  LICENSE-GPL3  README.md  decode-all.patch
substrate-relay/: Cargo.toml
zombienet-sdk-tests/: Cargo.toml
(+155833 files in other folders)
