[workspace]
resolver = "2"

members = [
	"bridges/bin/runtime-common",
	"bridges/modules/grandpa",
	"bridges/modules/messages",
	"bridges/modules/parachains",
	"bridges/modules/relayers",
	"client/cli",
	"client/consensus/aura",
	"client/consensus/common",
	"client/consensus/proposer",
	"client/consensus/relay-chain",
	"client/network",
	"client/pov-recovery",
	"client/service",
	"client/relay-chain-interface",
	"client/relay-chain-inprocess-interface",
	"client/relay-chain-rpc-interface",
	"client/relay-chain-minimal-node",
	"pallets/aura-ext",
	"pallets/collator-selection",
	"pallets/dmp-queue",
	"pallets/parachain-system",
	"pallets/parachain-system/proc-macro",
	"pallets/session-benchmarking",
	"pallets/solo-to-para",
	"pallets/xcm",
	"pallets/xcmp-queue",
	"parachain-template/node",
	"parachain-template/runtime",
	"primitives/core",
	"primitives/parachain-inherent",
	"primitives/timestamp",
	"primitives/utility",
	"polkadot-parachain",
	"parachains/common",
	"parachains/pallets/parachain-info",
	"parachains/pallets/ping",
	"parachains/runtimes/testing/rococo-parachain",
	"parachains/runtimes/starters/shell",
	"parachains/runtimes/starters/seedling",
	"parachains/runtimes/assets/common",
	"parachains/runtimes/assets/asset-hub-polkadot",
	"parachains/runtimes/assets/asset-hub-kusama",
	"parachains/runtimes/assets/asset-hub-westend",
	"parachains/runtimes/bridge-hubs/bridge-hub-rococo",
	"parachains/runtimes/bridge-hubs/bridge-hub-kusama",
	"parachains/runtimes/bridge-hubs/bridge-hub-polkadot",
	"parachains/runtimes/collectives/collectives-polkadot",
	"parachains/runtimes/contracts/contracts-rococo",
	"parachains/runtimes/glutton/glutton-kusama",
	"parachains/runtimes/testing/penpal",
	"parachains/integration-tests/emulated/common",
	"parachains/integration-tests/emulated/assets/asset-hub-kusama",
	"parachains/integration-tests/emulated/assets/asset-hub-polkadot",
	"parachains/integration-tests/emulated/assets/asset-hub-westend",
	"parachains/integration-tests/emulated/collectives/collectives-polkadot",
	"parachains/integration-tests/emulated/bridges/bridge-hub-rococo",
	"test/client",
	"test/relay-sproof-builder",
	"test/relay-validation-worker-provider",
	"test/runtime",
	"test/service",
	"xcm/xcm-emulator",
]

[profile.release]
panic = "unwind"
opt-level = 3

[profile.production]
inherits = "release"
lto = true
codegen-units = 1
