[package]
name = "devhub"
description = "A crate for the Polkadot SDK's reference documentation and tutorials"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://substrate.io"
repository.workspace = true
authors.workspace = true
edition.workspace = true
version = "1.0.0"

# The dependencies are only needed for docs.
[dependencies]