[package]
name = "doppelganger"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]

# Local
asset-hub-rococo-runtime = { workspace = true, default-features = true }
asset-hub-westend-runtime = { workspace = true }
bridge-hub-rococo-runtime = { workspace = true, default-features = true }
bridge-hub-westend-runtime = { workspace = true, default-features = true }
collectives-westend-runtime = { workspace = true }
coretime-rococo-runtime = { workspace = true }
coretime-westend-runtime = { workspace = true }
glutton-westend-runtime = { workspace = true }
parachains-common = { workspace = true, default-features = true }
penpal-runtime = { workspace = true }
people-rococo-runtime = { workspace = true }
people-westend-runtime = { workspace = true }
polkadot-omni-node-lib = { features = ["rococo-native", "westend-native"], workspace = true }
rococo-parachain-runtime = { workspace = true }
yet-another-parachain-runtime = { workspace = true }

# Substrate
sc-chain-spec = { workspace = true, default-features = true }
sc-cli = { workspace = true, default-features = true }
sc-service = { workspace = true, default-features = true }
sp-core = { workspace = true, default-features = true }
sp-genesis-builder = { workspace = true, default-features = true }
sp-keyring = { workspace = true, default-features = true }

# Polkadot
xcm = { workspace = true, default-features = true }

# Cumulus
cumulus-primitives-core = { workspace = true, default-features = true }

# Deps
serde_json =  { workspace = true, default-features = true }
log =  { workspace = true, default-features = true }
hex-literal =  { workspace = true, default-features = true }

[lints]
workspace = true
